--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -45,7 +45,7 @@
 	"dpa-reject-contract": "Data is required to maintain a contractual obligation you have asked us to do.",
 	"dpa-reject-label": "This request is rejected because",
 	"dpa-reject-lawful": "Data is required for a lawful reason.",
-	"dpa-reject-legal": "Data is required for the defence or pursuance of a legal clam by or against WikiTide Foundation.",
+	"dpa-reject-legal": "Data is required for the defence or pursuance of a legal clam by or against Wikivy Foundation.",
 	"dpa-reject-notice": "Please ensure you are rejecting this request for the correct reasons. If in doubt, please consult the Director of Trust and Safety.",
 	"dpa-reject-public": "Data is required in the public interest.",
 	"dpa-reject-unfoundly": "This request is manifestly unfounded or excessive.",
@@ -102,12 +102,12 @@
 	"filter": "Filter",
 	"filter-closed": "Display only closed resources",
 	"flags": "Flags",
-	"footer-company": "WikiTide Foundation, Inc. - a 501(c)(3) public charity in the United States. EIN: 93-2356406",
-	"footer-meta": "Miraheze Meta",
+	"footer-company": "Wikivy Foundation, Inc. - a 501(c)(3) public charity in the United States. EIN: pending",
+	"footer-meta": "Wikivy Meta",
 	"footer-privacy": "Privacy Policy",
 	"footer-tou": "Terms of Use",
 	"guidance": "Guidance",
-	"guidance-dpa": "<strong>I'm filling this in for myself</strong><br> If you are filling this in for yourself, the request will be appropriately marked for Trust and Safety to review noting that you made this request while logged into Miraheze. If you would like to recall this request, please email ts [at] miraheze.org to let us know as soon as possible. <hr> <strong>I am reporting someone under the age of 13</strong> <br> If you are reporting someone under the age of 13, please include as much detail as possible in the evidence section. Include links to where they have provided information that either makes you suspect they are under 13 or where they have said that they are. There is nothing as 'too much detail' here. If you don't feel you have enough information, please do still let us know! Do not attempt to ask the user to provide more information to prove whether they are under or over 13, this could cause problems both for Miraheze and yourself if you attempt to collect personally identifiable information from someone you suspect is under 13!",
+	"guidance-dpa": "<strong>I'm filling this in for myself</strong><br> If you are filling this in for yourself, the request will be appropriately marked for Trust and Safety to review noting that you made this request while logged into Miraheze. If you would like to recall this request, please email ts [at] wikivy.com to let us know as soon as possible. <hr> <strong>I am reporting someone under the age of 13</strong> <br> If you are reporting someone under the age of 13, please include as much detail as possible in the evidence section. Include links to where they have provided information that either makes you suspect they are under 13 or where they have said that they are. There is nothing as 'too much detail' here. If you don't feel you have enough information, please do still let us know! Do not attempt to ask the user to provide more information to prove whether they are under or over 13, this could cause problems both for Wikivy and yourself if you attempt to collect personally identifiable information from someone you suspect is under 13!",
 	"guidance-report": "When reporting things to us - be as specific and detailed as possible. You do not need to create one report for each involved user, we can launch multiple investigations based on the same information, however if multiple users are involved and there is substantially different information or activity involved, <strong>please</strong> submit multiple reports as appropriate. Specific guidance on what to include for the currently selected topic will be shown below.",
 	"guidance-report-license": " <strong>Copyright/Licensing</strong><br> Please include links to the infringing source and the original source - clearly stating the original license and why this usage is in violation of the source license. Please also include links to where this has been raised with both the local community and Stewards - Trust and Safety will not handle copyright violations unless both the community and Stewards have been uncooperative, or the request is being made on a legal basis (please email us the relevant legal authority while file attachment capability isn't present.).",
 	"guidance-report-sexual-gore": "<strong>Inappropriate Sexual or Extreme Content</strong><br> Please include links to all content along with an explanation of why you feel the content is extreme, inappropriate or harmful to people. Please note sexual content and gore is allowed, but should be appopriately prefaced with warnings. If it is not, please use this category to let us know if it entirely unexpected and outside of relevant context.",
@@ -118,10 +118,10 @@
 	"guidance-report-other": "<strong>Other</strong><br> Describe, in detail, exactly what the problem is, why Trust and Safety are the most appropriate team to handle this and potentially what laws have been violated within the United States. If you are generally unsure, this topic may be the most appropriate to choose.",
 	"history": "History",
 	"home": "Dashboard",
-	"home-a-appeal": "We are working on a formal policy and process to follow for appeals. For now, any communications relating to appeals of any sanctions or actions taken by a Trust and Safety member, please email us directly at ts [at] miraheze.org.",
+	"home-a-appeal": "We are working on a formal policy and process to follow for appeals. For now, any communications relating to appeals of any sanctions or actions taken by a Trust and Safety member, please email us directly at ts [at] wikivy.com.",
 	"home-a-dpa": "You can request the removal of your information by pressing the plus (+) at the top of screen and then selecting \"Data Protection\". We will seek to honour all requests submitted, however may choose to deny certain requests based on circumstances as we are aware of them. All rejections will align with the Data Protection Act 2018 in the United Kingdom and as an extension the General Data Protection Regulations 2016/679. If you suspect a user is under the age of 13 and using our services, please submit a Data Protection request as well in these circumstances.",
 	"home-a-how-report": "You can make a report to the Trust and Safety team by pressing the plus (+) at the top of the screen and then selecting \"Report\". There is guidance on the form for you to follow depending on what you are specifically reporting. Make sure to be as detailed as possible!",
-	"home-a-trust-and-safety": "Trust and Safety is a team within the WikiTide Foundation that exclusively handles serious violations of Miraheze's legal policies (such as the Terms of Use and Privacy Policy) or conduct that otherwise is illegal within the United States. The team is also able to take control of any matters where the handling of them would be sensitive to either the trust people might have in the WikiTide Foundation or where the safety of user(s) could be compromised as a direct result of the handling of such a case.",
+	"home-a-trust-and-safety": "Trust and Safety is a team within the WikiTide Foundation that exclusively handles serious violations of Wikivy's legal policies (such as the Terms of Use and Privacy Policy) or conduct that otherwise is illegal within the United States. The team is also able to take control of any matters where the handling of them would be sensitive to either the trust people might have in the WikiTide Foundation or where the safety of user(s) could be compromised as a direct result of the handling of such a case.",
 	"home-q-appeal": "How can I appeal a sanction?",
 	"home-q-dpa": "How can I remove personal information?",
 	"home-q-how-report": "How do I report something?",
@@ -159,7 +159,7 @@
 	"investigations": "Investigations",
 	"legislation": "UK Legislation Cheat Sheet",
 	"legislation-sheet": "",
-	"login": "Login with Miraheze",
+	"login": "Login with Wikivy",
 	"login-disabled": "Login for this user account has been disabled!",
 	"logout": "Logout",
 	"nav-next": "Next",
@@ -174,9 +174,9 @@
 	"reassign-assigned": "Reassign investigation from <strong>:assigned</strong> to myself",
 	"reassign-claim": "Assign investigation to myself",
 	"recommendation": "Recommendation",
-	"recommendation-ban": "full service ban from all WikiTide Foundation services.",
+	"recommendation-ban": "full service ban from all Wikivy Foundation services.",
 	"recommendation-is": "Recommendation is",
-	"recommendation-partial": "a restriction on accessing some WikiTide Foundation services.",
+	"recommendation-partial": "a restriction on accessing some Wikivy Foundation services.",
 	"recommendation-protect": "use of additional protection to prevent content work.",
 	"recommendation-reason": "The reason for this recommendation is",
 	"recommendation-remove": "a removal of content, with or without additional restrictions.",
@@ -232,7 +232,7 @@
 	"user-flags-user-manager": "Manage other users",
 	"user-profile": "User Profile",
 	"username": "Username",
-	"username-exist": "The username must be a valid Miraheze username.",
+	"username-exist": "The username must be a valid Wikivy username.",
 	"username-not-same": "You are not currently logged in as this user account.",
 	"users": "Users",
 	"users-list": "List All Users",
